Bug 104333 - FILEOPEN: DOC: Table incorrectly splitted
Summary: FILEOPEN: DOC: Table incorrectly splitted
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: high major
Assignee: Justin L
URL:
Whiteboard: target:5.4.0 target:5.3.0.1
Keywords: bibisected, bisected, dataLoss, filter:doc, regression
Depends on:
Blocks:
 
Reported: 2016-12-01 22:31 UTC by Xisco Faulí
Modified: 2016-12-11 13:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample (53.00 KB, application/msword)
2016-12-01 22:31 UTC, Xisco Faulí
Details
Screenshot table format 5.2.4 left 5.3 right (69.77 KB, image/png)
2016-12-01 23:40 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2016-12-01 22:31:09 UTC
Created attachment 129211 [details]
sample

Steps:
1. Open attached document

Observed behaviour: Different tables are incorrectly splitted causing text to get lost

Reproduced in

Version: 5.3.0.0.alpha0+
Build ID: 63965d7dc571c7dce999980737f9d57a7c5151da
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8)

but not in

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e
Comment 1 Xisco Faulí 2016-12-01 22:33:12 UTC
Regression introduced by:

author	Justin Luth <justin_luth@sil.org>	2016-08-25 17:08:26 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2016-08-30 11:29:03 (GMT)
commit 129f93e46c29b388d38e9097869fd3e72dc40a5e (patch)
tree fe59a543022e650c1dc2f53af2f2f1022b3bf15c
parent 5758f8a7f8e2e9819ef09f4e1fe38921b247dc65 (diff)
tdf#91083 ww8import: set table keep/split properties if emulated
This applies primarily to multi-row tables.  (Single row tables handle
don't-split emulation differently).

Since .doc doesn't have table options to "don't split table"
and "keep with next paragraph", we emulated that and now we detect
the emulation and tick those settings again.

Adding Cc: to Justin Luth
Comment 2 m_a_riosv 2016-12-01 23:40:14 UTC
Created attachment 129214 [details]
Screenshot table format 5.2.4 left 5.3 right

Looks fine with
Version: 5.2.4.1 (x64)
Build ID: 9b50003582f07ac674d6451e411e9b77cccd2b22
CPU Threads: 4; OS Version: Windows 6.19; UI Render: GL; 
Locale: es-ES (es_ES); Calc: group

but not with
Version: 5.3.0.0.alpha1+
Build ID: 172325bedf69bbc162f3c1948264451c90c105a3
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; Layout Engine: new; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-11-21_05:26:40
Locale: es-ES (es_ES); Calc: group

Comparing table format on 5.2.4 and 5.3, seems 'Allow table to split across pages' and 'Keep with next paragraph' are changed on 5.3
Comment 3 Commit Notification 2016-12-02 17:05:44 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1f8a70262ad99668210d9d6a128efd8382f63dd5

tdf#104333 revert ww8import: set table keep/split if emulated

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2016-12-03 04:06:38 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7837860ff99577467fecb287cb0e3b111729b70a&h=libreoffice-5-3

tdf#104333 revert ww8import: set table keep/split if emulated

It will be available in 5.3.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 m_a_riosv 2016-12-11 13:16:30 UTC
Tested
Version: 5.4.0.0 alpha0+, TB Win-x86@39, Time: 2016-12-10_23:50:52

Version: 5.3.0.0.beta1+ (x64)
Build ID: 7f47d68c4310b8bae09286a81036a6fa669a1705
CPU Threads: 4; OS Version: Windows 6.19; UI Render: GL; Layout Engine: new; 
TinderBox: Win-x86_64@62-TDF, Branch:libreoffice-5-3, Time: 2016-12-08_16:10:30
Locale: es-ES (es_ES); Calc: CL