tdf#104333 revert ww8import: set table keep/split if emulated

tables that span multiple pages, and rows greater than one page
caused problems, so just removing the enhancement that tried
to emulate what the original odt looked like.

reverts commit 129f93e46c29b388d38e9097869fd3e72dc40a5e
from bug tdf#91083

Change-Id: Iac31116d731e1e4aa60ee6b8de973f7f9291e47a
Reviewed-on: https://gerrit.libreoffice.org/31551
Reviewed-by: Justin Luth <justin_luth@sil.org>
Tested-by: Justin Luth <justin_luth@sil.org>
(cherry picked from commit 1f8a70262ad99668210d9d6a128efd8382f63dd5)
Reviewed-on: https://gerrit.libreoffice.org/31568
Tested-by: Jenkins <ci@libreoffice.org>